--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,10 @@ allprojects {
         jcenter()
     }
 }
+
+ext.libraries = [
+        androidV723Support: 'com.android.support:appcompat-v7:23.+',
+        androidV722Support: 'com.android.support:appcompat-v7:22.+',
+        cardView: 'com.android.support:cardview-v7:21.+',
+        picasso: 'com.squareup.picasso:picasso:2.5.2',
+]
