--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <provider
+            android:name = ".Database.DataProvider"
+            android:authorities="com.karthyk.geofriends.Database.geoFriendsDB">
+        </provider>
+
     </application>
 
 </manifest>
