--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
-        classpath 'com.google.gms:google-services:1.4.0-beta3'
+        classpath 'com.google.gms:google-services:1.5.0-beta2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,6 +21,8 @@ allprojects {
 ext.libraries = [
         androidV723Support: 'com.android.support:appcompat-v7:23.+',
         androidV722Support: 'com.android.support:appcompat-v7:22.+',
+        androidSupportDesign: 'com.android.support:design:23.+',
         cardView: 'com.android.support:cardview-v7:21.+',
         picasso: 'com.squareup.picasso:picasso:2.5.2',
+        shapeView: 'de.hdodenhof:circleimageview:2.0.0'
 ]
