--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,22 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'geofriends'
+            keyPassword 'iopex@123'
+            storeFile file('/media/karthik/Development/projects/GeoFriends/KeyStore/ReleaseKey.jks')
+            storePassword 'iopex@123'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
     defaultConfig {
         applicationId "com.karthyk.geofriends"
         minSdkVersion 15
@@ -14,8 +27,10 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable true
+            signingConfig signingConfigs.config
         }
     }
 }
